feat: Introduce chat room functionality, redesign the dashboard, and expand i18n support to include Hausa.

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -170,5 +170,30 @@
     "contact": "اتصل بنا",
     "copyright": "© 2026 lingopulse. بُني بشغف لمحبي اللغات.",
     "hackathon": "بُني للهاكاثون"
+  },
+  "dashboard": {
+    "hello": "مرحباً،",
+    "welcome": "مرحباً بك في اللوبي العالمي",
+    "heroTitle": "ترجم",
+    "heroTitleHighlight": "تلقائياً.",
+    "heroTitle2": "تحدث مع",
+    "heroTitle2Highlight": "الجميع.",
+    "heroSubtitle": "انضم إلى غرفة وتحدث بلغتك الأم. محركنا يترجم كل رسالة فوراً للجميع.",
+    "quickJoin": "انضم سريعاً للغرفة 1",
+    "communitiesTitle": "المجتمعات المباشرة",
+    "newRoom": "غرفة جديدة",
+    "roomSubtitle": "انضم إلى المحادثة العالمية في هذه الغرفة.",
+    "engineActive": "المحرك العالمي نشط",
+    "live": "مباشر"
+  },
+  "chat": {
+    "activePulsers": "المستخدمون النشطون",
+    "translationActive": "الترجمة الفورية نشطة",
+    "today": "اليوم،",
+    "original": "الأصلي",
+    "translated": "مترجم",
+    "inputPlaceholder": "اكتب بـ {{lang}} أو أي لغة...",
+    "autoDetect": "كشف تلقائي",
+    "poweredBy": "مدعوم بواسطة 🌍 محرك الترجمة الفورية Lingo Pulse"
   }
 }
